--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.14",
+		"postcss": "^8.4.49",
 		"svelte": "^5.0.0",
+		"tailwindcss": "^3.4.15",
 		"vite": "^6.0.0"
 	}
 }
