--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^3.4.15",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@tastytrade/api": "^5.0.0"
 	}
 }
