--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-	"name": "watchlist",
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.14",
-		"postcss": "^8.4.49",
-		"svelte": "^5.0.0",
-		"tailwindcss": "^3.4.15",
-		"vite": "^6.0.0"
-	},
-	"dependencies": {
-		"@tastytrade/api": "^5.0.0"
-	}
+    "name": "watchlist",
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/kit": "^2.9.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "autoprefixer": "^10.4.20",
+        "daisyui": "^4.12.14",
+        "postcss": "^8.4.49",
+        "svelte": "^5.0.0",
+        "tailwindcss": "^3.4.15",
+        "vite": "^6.0.0"
+    },
+    "dependencies": {
+        "axios": "^1.7.9",
+        "cookie": "^1.0.2",
+        "js-cookie": "^3.0.5"
+    }
 }
