--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "daisyui": "^4.12.14",
         "postcss": "^8.4.49",
         "svelte": "^5.0.0",
+        "svelte-loading-spinners": "^0.3.6",
         "tailwindcss": "^3.4.15",
         "vite": "^6.0.0"
     },
